[project]
requires-python = ">=3.8"

[build-system]
requires = ["wheel >= 0.31.0", 
            "setuptools >= 48", 
            "twine>= 1.11.0",
            "oldest-supported-numpy", 
            ]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]

