[build-system]
requires = ["setuptools >= 64.0",
            "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "Pystra"
dynamic = ["version"]
description = "Python Structural Reliability Analysis"
license = {text = "Apache 2.0"}
keywords = ["structural", "reliability", "engineering"]
authors = [{name = "Colin Caprani", email = "colin.caprani@monash.edu"},
           {name = "M. Shihab Khan", email = "shihab.khan@monash.edu"},
           {name = "Jürgen Hackl", email = "hackl.science@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
    "pandas",
]

[project.readme]
file = "README.rst"
content-type = "text/markdown"

[project.urls]
Homepage = "https://pystra.github.io/pystra/"
Documentation = "https://pystra.github.io/pystra/"
Source = "https://github.com/pystra/pystra/"
Tracker = "https://github.com/pystra/pystra/issues/"

[project.optional-dependencies]
test = ["pytest >= 6.2.2"]

[tool.setuptools]
platforms = ["any"]
include-package-data = true
license-files = ["LICENSE"]

# [tool.setuptools.packages]
# find = {namespaces = false}

[tool.setuptools.dynamic]
version = {attr = "pystra.__version__"}

[tool.distutils.bdist_wheel]
universal = 1

[tool.aliases]
test = "pytest"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]
