[metadata]
name = Pystra
version = attr: pystra.__version__
description = Python Structural Reliability Analysis
url = https://pystra.github.io/pystra/
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
license_file = LICENSE
keyword = beam, bridge, vehicle
author = Jürgen Hackl 
author_email = hackl.science@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Topic :: Scientific/Engineering
    Environment :: Console
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls = 
    Documentation = https://pystra.github.io/pystra/
    Source =  https://github.com/pystra/pystra/
    Tracker = https://github.com/pystra/pystra/issues/

[options]
packages = find:
platforms = any
include_package_data = True
python_requires = >=3.8
setup_requires =
    setuptools
install_requires = 
    matplotlib
    numpy
    scipy
    pytest

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[options.extras_require]
test =
    pytest >= 6.2.2

